plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.4'
    id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

// Enable Java Preview (1)
compileJava {
    options.compilerArgs += [
            '--enable-preview',
            '-Amapstruct.defaultComponentModel=spring'
    ]

}

// Enable Java Preview (2)
compileTestJava {
    options.compilerArgs += [
            '--enable-preview',
//                '-Amapstruct.defaultComponentModel=spring'
    ]
}

// Enable Java Preview (3)
test {
    useJUnitPlatform()
    jvmArgs([
            '--enable-preview',
//                '-Amapstruct.defaultComponentModel=spring'
            '-Dspring.profiles.active=local'
    ])
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    runtimeOnly 'com.mysql:mysql-connector-j'

    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'

    // NTP
    implementation 'commons-net:commons-net:3.9.0'

    // gson
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'com.fasterxml.jackson.core:jackson-annotations'

    // password encoder
    implementation 'org.springframework.security:spring-security-crypto'

    // Map Struct
    implementation 'org.mapstruct:mapstruct:1.5.3.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
